; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/vbscript/extr_global.c_Global_Right.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/vbscript/extr_global.c_Global_Right.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"(%s %s)\0A\00", align 1
@VT_BSTR = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [10 x i8] c"len = %d\0A\00", align 1
@E_FAIL = common dso_local global i32 0, align 4
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32*)* @Global_Right to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Global_Right(i32* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i32* null, i32** %12, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @debugstr_variant(i32* %16)
  %18 = load i32*, i32** %7, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = call i32 @debugstr_variant(i32* %19)
  %21 = call i32 @TRACE(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %20)
  %22 = load i32*, i32** %7, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 1
  %24 = call i64 @V_VT(i32* %23)
  %25 = load i64, i64* @VT_BSTR, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %30

27:                                               ; preds = %4
  %28 = load i32*, i32** %7, align 8
  %29 = call i32* @V_BSTR(i32* %28)
  store i32* %29, i32** %10, align 8
  br label %40

30:                                               ; preds = %4
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @to_string(i32* %31, i32** %12)
  store i32 %32, i32* %15, align 4
  %33 = load i32, i32* %15, align 4
  %34 = call i64 @FAILED(i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %30
  %37 = load i32, i32* %15, align 4
  store i32 %37, i32* %5, align 4
  br label %85

38:                                               ; preds = %30
  %39 = load i32*, i32** %12, align 8
  store i32* %39, i32** %10, align 8
  br label %40

40:                                               ; preds = %38, %27
  %41 = load i32*, i32** %7, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 1
  %43 = call i32 @to_int(i32* %42, i32* %13)
  store i32 %43, i32* %15, align 4
  %44 = load i32, i32* %15, align 4
  %45 = call i64 @FAILED(i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %40
  %48 = load i32, i32* %15, align 4
  store i32 %48, i32* %5, align 4
  br label %85

49:                                               ; preds = %40
  %50 = load i32, i32* %13, align 4
  %51 = icmp slt i32 %50, 0
  br i1 %51, label %52, label %56

52:                                               ; preds = %49
  %53 = load i32, i32* %13, align 4
  %54 = call i32 @FIXME(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %53)
  %55 = load i32, i32* @E_FAIL, align 4
  store i32 %55, i32* %5, align 4
  br label %85

56:                                               ; preds = %49
  %57 = load i32*, i32** %10, align 8
  %58 = call i32 @SysStringLen(i32* %57)
  store i32 %58, i32* %14, align 4
  %59 = load i32, i32* %13, align 4
  %60 = load i32, i32* %14, align 4
  %61 = icmp sgt i32 %59, %60
  br i1 %61, label %62, label %64

62:                                               ; preds = %56
  %63 = load i32, i32* %14, align 4
  store i32 %63, i32* %13, align 4
  br label %64

64:                                               ; preds = %62, %56
  %65 = load i32*, i32** %10, align 8
  %66 = load i32, i32* %14, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i32, i32* %65, i64 %67
  %69 = load i32, i32* %13, align 4
  %70 = sext i32 %69 to i64
  %71 = sub i64 0, %70
  %72 = getelementptr inbounds i32, i32* %68, i64 %71
  %73 = load i32, i32* %13, align 4
  %74 = call i32* @SysAllocStringLen(i32* %72, i32 %73)
  store i32* %74, i32** %11, align 8
  %75 = load i32*, i32** %12, align 8
  %76 = call i32 @SysFreeString(i32* %75)
  %77 = load i32*, i32** %11, align 8
  %78 = icmp ne i32* %77, null
  br i1 %78, label %81, label %79

79:                                               ; preds = %64
  %80 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %80, i32* %5, align 4
  br label %85

81:                                               ; preds = %64
  %82 = load i32*, i32** %9, align 8
  %83 = load i32*, i32** %11, align 8
  %84 = call i32 @return_bstr(i32* %82, i32* %83)
  store i32 %84, i32* %5, align 4
  br label %85

85:                                               ; preds = %81, %79, %52, %47, %36
  %86 = load i32, i32* %5, align 4
  ret i32 %86
}

declare dso_local i32 @TRACE(i8*, i32, i32) #1

declare dso_local i32 @debugstr_variant(i32*) #1

declare dso_local i64 @V_VT(i32*) #1

declare dso_local i32* @V_BSTR(i32*) #1

declare dso_local i32 @to_string(i32*, i32**) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @to_int(i32*, i32*) #1

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @SysStringLen(i32*) #1

declare dso_local i32* @SysAllocStringLen(i32*, i32) #1

declare dso_local i32 @SysFreeString(i32*) #1

declare dso_local i32 @return_bstr(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
